--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,232 @@
-body {
+*{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  scroll-padding-top: 2rem;
+  scroll-behavior: smooth;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration:none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html{
+  font-size: 82.5%;
+  box-sizing: border-box;
+}
+
+body, #root {
+  height: 100vh;
+  margin: 0;
+}
+
+body, input, select, textarea{
+  font-size: 1rem;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+
+img{
+  width: 100%;
+  border-radius: 20px;
+}
+
+header{
+  position: fixed;
+  padding: 10px 16px;
+  top: 0;
+  left: 0;
+  background-color: black;
+  width: 100%;
+  z-index: 100;
+  text-align: justify;
+  justify-content: space-between;
+  display: flex;
+  align-items: center;
+  padding: 0.5rem;
+}
+
+.navigation {
+  display: flex;
+  justify-content: space-between;
+  background: hsl(0, 9%, 55%);
+  padding: 10px 16px;
+  margin-bottom: 30px;
+  border-radius: 10px;
+  font-size: larger;
+  font-weight: 900;
+  text-align: justify;
+  font-display: swap;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.container{
+  max-width: 1068px;
+  margin: auto;
+  width: 100%;
+}
+
+
+.logo{
+  font-size: 1.5rem;
+  color: goldenrod;
+  font-weight: 400;
+}
+
+.section{
+  padding: 4rem 0 3rem;
+}
+
+.section-title{
+  font-size: 1.5rem;
+  font-weight: 600;
+  text-align: center;
+  margin-bottom: 5.5rem;
+}
+
+.shop{
+  margin-top: 7rem;
+}
+
+.shop-content{
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(150px,auto));
+  gap: 1.5rem;
+}
+
+.product-box {
+  position: relative;
+  border-radius: 20px;
+  background-color:aquamarine;
+  padding: 8px;
+  box-sizing: border-box;
+}
+
+.product-box:hover{
+  padding: 5px;
+  border: 1px solid rgb(0, 7, 20);
+  transition: 0.4s;
+}
+
+.product-img{
+  width: 100%;
+  height: auto;
+  margin-bottom: 0.5rem;
+
+}
+
+.product-title{
+  font-size: 1.1rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  margin-bottom: 0.5rem;
+
+}
+
+.price{
+  font-weight: 500;
+}
+
+.add-cart{
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  background: black;
+  color: aqua;
+  padding: 10px;
+  cursor: pointer;
+}
+
+
+
+.homelink{
+  display: flex;
+  justify-content: left;
+  width: 200px;
+  color: rgba(204, 13, 13, 0.5);
+  text-decoration: none;
+  letter-spacing: 0.2em;
+  font-size: 1.55em;
+  text-transform: uppercase;
+  font-weight: 200;
+
+}
+
+.tourlink{
+  display: flex;
+  justify-content: right;
+  width: 200px;
+  color: rgba(204, 13, 13, 0.5);
+  text-decoration: none;
+  letter-spacing: 0.1em;
+  font-size: 1em;
+  text-transform: uppercase;
+  font-weight: 100;
+  right: 100%;
+}
+
+button{
+  color:#fbfcfd;
+  padding: 10px 25px;
+  background: transparent;
+  border: 1px solid #fff;
+  border-radius: 20px;
+  outline: none;
+  cursor: pointer;
+  background: #ce49c3;
+  box-shadow: inset 10px 10px 10px  rgba(3, 248, 146, 0.05), 
+  15px 35px 10px rgba(101, 60, 212, 0.836), 
+  15px 20px 20px rgba(1,190,254,0.1), 
+  inset -10px -10px 15px rgba(255,255,255,0.9);
+}
+
+.home-content{
+  position: absolute;
+  top: 50%;
+  left: 8%;
+  transform: translateY(-50%);
+  z-index: 2;
+}
+
+h1{
+  font-size: 80px;
+  margin: 10px 0 30px;
+  line-height: 80px;
+  text-align: center;
+  font-weight: 800;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-style: unset;
+  color: rgb(190, 190, 116);
+}
+
+h2{
+  font-size: 90px;
+  margin: 10px 0 30px;
+  line-height: 80px;
+  text-align: center;
+  font-weight: 900;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-style: oblique;
+
+}
+
+small{
+  font-size: 20px;
+  font-weight: 500;
+  font-family: 'Courier New', Courier, monospace;
+  font-style: normal;
+  font-variant: unset;
+}
+
+
+.content{
+  display:flex;
+  flex-wrap: wrap;
+}
+
+.main{
+  flex: 3 60rem;
+}
+
+.sidebar{
+  flex: 1 20rem;
 }
